@@ -128,11 +128,11 @@
             <width>940</width>
             <height>460</height>
             <onleft>2000</onleft>
-            <onright>6000</onright>
+<!--            <onright>6000</onright>-->
             <onup>600</onup>
             <ondown>600</ondown>
             <viewtype label="Programs">wide</viewtype>
-            <pagecontrol>6000</pagecontrol>
+<!--            <pagecontrol>6000</pagecontrol>-->
             
             <!-- 
             <scrolltime>0</scrolltime>
@@ -278,7 +278,23 @@
         <animation effect="fade" time="200">WindowOpen</animation>
         <animation effect="fade" time="200">WindowClose</animation>
     </control>
-        
+
+<!-- Footer -->        
+
+    <control type="label">
+        <posx>20r</posx>
+        <posy>50r</posy>
+        <!--<width>200</width>-->
+        <height>35</height>
+        <align>right</align>
+        <aligny>center</aligny>
+        <font>font12</font>
+        <textcolor>ffffffff</textcolor>
+        <label>Recording $INFO[Window.Property(currentItem)] of $INFO[Container(600).NumItems]</label>
+        <animation effect="fade" time="200">WindowOpen</animation>
+        <animation effect="fade" time="200">WindowClose</animation>
+        <visible>!substring(Window.Property(busy),true)</visible>
+    </control>
     
 <!-- Left nav panel -->    
 
@@ -381,6 +397,8 @@
         <visible>substring(Window.Property(busy),true)</visible>
         <animation effect="fade" time="250">VisibleChange</animation>    
     </control>
+    
+    
         
   </controls>
 </window>
