@@ -100,7 +100,15 @@ class RecordingsWindow(BaseWindow):
             self.settings.put('recordings_sort_ascending', '%s' % self.sortAscending)
             self.settings.put('recordings_recording_group', self.group)
             self.close()
-        
+        else:
+            self.renderSelectedIndex()
+            
+    def renderSelectedIndex(self):
+        try:
+            self.setWindowProperty('currentItem', '%s' % (self.programsListBox.getSelectedPosition()+1))
+        except:
+            pass
+                
     @run_async
     @coalesce
     def preCacheThumbnails(self):
@@ -140,6 +148,7 @@ class RecordingsWindow(BaseWindow):
         log.debug('Rendering....')
         self.renderNav()
         self.renderPrograms()
+        self.renderSelectedIndex()
         self.renderPosters()
         
     def renderNav(self):
@@ -199,6 +208,7 @@ class RecordingsWindow(BaseWindow):
         self.programsListBox.reset()
         self.programsListBox.addItems(self.listItems)
         self.programsListBox.selectItem(selectionIndex)
+        self.renderSelectedIndex()
         
     @run_async
     @timed
@@ -237,6 +247,7 @@ class RecordingsWindow(BaseWindow):
             self.renderProgramDeleted(programIterator.current(), programIterator.index())
         elif programIterator.index() != self.lastSelected:
             self.programsListBox.selectItem(programIterator.index())
+            self.renderSelectedIndex()
                 
         del win
         
